--- a/HtmlCss/ExplicacionHtmlCss/index.html
+++ b/HtmlCss/ExplicacionHtmlCss/index.html
@@ -15,6 +15,12 @@
                 <h4>h4</h4>
                 <h5>h5</h5>
                 <h6>h6</h6>
+                <a href="https://www.google.com">Este es un link</a>
+                <article>
+                    <p>Esto es un parrafo</p>
+                </article>
+                <img src="" alt="Foto de un border collie">
+                <span>Textos cortos</span>
             </section>
             <section></section>
             <section></section>
